# mwsim

./: README.md  mwsim.yml  pyproject.toml
.github/workflows/: test.yml
notebooks/: gmi_simulations.ipynb
scripts/: README.md  extract_surf_vars.sh  extract_vert_vars.sh  gulf_grid.txt
src/mwsim/: __init__.py  config.py  data_loaders.py  geometry.py  sensors.py  utils.py
src/mwsim/simulators/: __init__.py  arts26.py  base.py
tests/: test_arts26_simulator.py  test_data_loaders.py
